split up nether-end items into separate categories, add end items toggle, fix nether-end items being added twice